# mcrt_computation

./: CMakeLists.txt  DWABUILD.md  README.md  SConscript  flowpipeline.yaml  package.py
cmake/: McrtComputationConfig.cmake.in
cmd/standalone/: README.md  SConscript  main.cc
cmd/testclient/: SConscript  main.cc  runcomp_mcrt.config
computation/: CMakeLists.txt
computation/progmcrt/: CMakeLists.txt  ProgMcrtComputation.cc  ProgMcrtComputation.h  SConscript
computation/progmcrt_dispatch/: CMakeLists.txt  ProgMcrtDispatchComputation.cc  ProgMcrtDispatchComputation.h  ProgMcrtDispatchComputationDebugConsole.cc  ProgMcrtDispatchComputationDebugConsole.h  SConscript
computation/progmcrt_merge/: CMakeLists.txt  ProgMcrtMergeClockDeltaDriver.cc  ProgMcrtMergeClockDeltaDriver.h  ProgMcrtMergeComputation.cc  ProgMcrtMergeComputation.h  ProgMcrtMergeDebugFeedback.cc  ProgMcrtMergeDebugFeedback.h  SConscript
doc/: SConscript
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/mcrt_logging/: CMakeLists.txt  McrtLogging.cc  McrtLogging.h  SConscript  TimeStampDebugMsg.cc  TimeStampDebugMsg.h
lib/common/rec_load/: CMakeLists.txt  RecLoad.cc  RecLoad.h  SConscript
lib/engine/: CMakeLists.txt
lib/engine/mcrt/: CMakeLists.txt  DeltaImageCache.cc  DeltaImageCache.h  McrtDebugFeedback.cc  McrtDebugFeedback.h  McrtUpdate.cc  McrtUpdate.h  MessageHistory.cc  MessageHistory.h  RenderContextDestructionManager.cc  RenderContextDestructionManager.h  RenderContextDriver.cc  RenderContextDriver.h  RenderContextDriverManager.cc  RenderContextDriverManager.h  RenderContextDriverMaster.cc  RenderContextDriverMaster.h  RenderContextDriver_debugCommand.cc  RenderContextDriver_enqMessage.cc  RenderContextDriver_evalMessage.cc  RenderContextDriver_feedback.cc  RenderContextDriver_onIdle.cc  RenderContextDriver_startStop.cc  SConscript  TimingRecorder.cc  TimingRecorder.h  Watcher.cc  Watcher.h
test/config/engines/: a3multi.json  a3rdl.json  a4multi.json  a4rdl.json
test/config/sessions/: a3multi.json  a3rdl.json  a4multi.json  a4rdl.json
